# ros-catkin-ws

./: IssuesAndFixes  README.md  jfr_env.bash  ros_settings.bash  smokebot_env.bash
jfr-experiments/src/: GASBOT.launch  main.launch  map.launch
jfr-experiments/src/exploration_launch/: CMakeLists.txt  main_human_expert_exploration.launch  main_one_step_exploration.launch  main_two_step_exploration_detection (copy).launch  main_two_step_exploration_detection.launch  main_two_step_exploration_tomography_adaptive.launch  main_two_step_exploration_tomography_fixed.launch  package.xml
jfr-experiments/src/exploration_planning/: notes
jfr-experiments/src/exploration_planning/kdmv_publisher/: CMakeLists.txt  package.xml
jfr-experiments/src/exploration_planning/kdmv_publisher/launch/: gdm_publisher.launch
jfr-experiments/src/exploration_planning/kdmv_publisher/src/: gas_map.cpp  gas_map.h  gdm_publisher_node.cpp  kernel_dmv_node.cpp  kernel_dmv_node.h  simple_test_publisher_node.cpp
jfr-experiments/src/exploration_planning/plan_execution/: CMakeLists.txt  package.xml
jfr-experiments/src/exploration_planning/plan_execution/launch/: conf_map_publisher.launch  conf_publisher.launch  exploration_gdm_publisher.launch  gdm_pcl_publisher.launch  human_plan.launch  one_step_exploration.launch  scan_publisher.launch  sensor_placements_map_publisher.launch  two_step_exploration_detection.launch
jfr-experiments/src/exploration_planning/plan_execution/src/: activities_publisher_node.cpp  common_functions.h  common_prelude.h  conf_publisher_node.cpp  env_map_publisher_node.cpp  exploration_exe_publisher_node.cpp  exploration_gdm_human_publisher_node.cpp  exploration_gdm_publisher_node.cpp  exploration_gdm_publisher_node2.cpp  exploration_gdm_robot_publisher_node.cpp  exploration_plan_publisher_node.cpp  gdm_grid_publisher_node.cpp  gdm_pcl_publisher_node.cpp  human_exploration_node.cpp  human_prelude.h  ptu_sweep_request_node.cpp  robot_exploration_node.cpp  robot_exploration_sweep_test_node.cpp  robot_prelude.h  scan_publisher_node.cpp
jfr-experiments/src/exploration_planning/plan_execution/srv/: ExecutedConfNum.srv
jfr-experiments/src/pointcloud_tutorial/: CMakeLists.txt  package.xml
jfr-experiments/src/pointcloud_tutorial/src/: simple_pointcloud_node.cpp  simple_pointcloud_node2.cpp
jfr-experiments/src/ptu/ptu_control2/: CMakeLists.txt  package.xml
jfr-experiments/src/ptu/ptu_control2/src/: ptu_control.cpp  service_call_sweep.cpp
jfr-experiments/src/rmld_node/: CMakeLists.txt  package.xml
jfr-experiments/src/rmld_node/msg/: rmld_msg.msg
jfr-experiments/src/rmld_node/msg_gen/lisp/: _package_rmld_msg.lisp  rmld_msg.lisp  rmld_node-msg.asd
jfr-experiments/src/rmld_node/src/: generic_main.cpp  rmld_node.cpp  rmld_node.h
jfr-experiments/src/visualization_tutorials/: CMakeLists.txt  package.xml
jfr-experiments/src/visualization_tutorials/src/: points_and_lines.cpp
olfaction-demo/src/gasbot/gasbot_gdm/: ISSUES
olfaction-demo/src/gasbot/gasbot_gdm/gdm_tdlas/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_old.txt  gdm_launcher.launch  gdm_launcher.launch~  gdm_tdlas.launch  gdm_tdlas.launch~  mainpage.dox  manifest.xml  manifest.xml~  package.xml  package.xml~
olfaction-demo/src/gasbot/gasbot_gdm/octo_raytrace/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_catkin_first_version.txt  CMakeLists_catkin_first_version.txt~  CMakeLists_old.txt  mainpage.dox  mainpage.dox~  manifest.xml  package.xml  package.xml~  test.launch  tracer_debug.launch  tracer_debug.launch~
olfaction-demo/src/gasbot/gasbot_gdm/pc_builder/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_new1.txt  CMakeLists_old.txt  mainpage.dox  manifest.xml  package.xml  package.xml~  pc_builder.launch  pc_builder.launch~
olfaction-demo/src/gasbot/gasbot_historian/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
olfaction-demo/src/gasbot/gasbot_historian/launch/: historian-icra2016-demo.launch  historian.launch  (+3 more)
olfaction-demo/src/gasbot/gasbot_planning/: CMakeLists.txt~  POSES.txt~  package.xml  package.xml~  plan-ragd-icra2016demo.txt  plan.txt  plan.txt~  plan_experts_solution.txt  plan_experts_solution.txt~  plan_spp.txt  plan_template_matching.txt
olfaction-demo/src/husky/husky_base/: CMakeLists.txt  CMakeLists.txt~
olfaction-demo/src/husky/husky_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
olfaction-demo/src/ptu/amtec/: CMakeLists.txt~
olfaction-demo/src/ptu/ptu_control/: package.xml~
olfaction-demo/src/rmld_node/: CMakeLists.txt~  package.xml~
olfaction-demo/src/rmld_node/msg/: rmld_msg.msg~
olfaction-demo/src/rmld_node/src/: CerealPort.cpp  CerealPort.cpp~  generic_main.h  generic_main.h~  rmld_node.cpp~  rmld_node.h~
olfaction-demo/src/velodyne/: Notes-Arain
(+1456 files in other folders)
