<package>
  <name>kdmv_publisher</name>
  <version>3.0.0</version>
  <description>Kernel DM+V based publisher of a gas distrubution map</description>
  <maintainer email="asif.arain@oru.se">vhz</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org</url>
  <!-- <url type="bugtracker"></url> -->
    
  <author>Asif Arain</author>
  <author>vhz</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>ptu_control2</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>ptu_control2</run_depend>

</package>
